--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@electron-forge/maker-zip": "6.0.0-beta.53",
     "@electron-forge/plugin-webpack": "6.0.0-beta.53",
     "@types/csp-html-webpack-plugin": "3.0.0",
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/eslint": "7.2.2",
     "@types/eslint-plugin-prettier": "3.1.0",
     "@types/file-loader": "4.2.0",
@@ -91,6 +92,7 @@
     "csp-html-webpack-plugin": "4.0.0",
     "css-loader": "4.3.0",
     "electron": "10.1.1",
+    "electron-devtools-installer": "^3.1.1",
     "eslint": "7.8.1",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-standard": "14.1.1",
