--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.53",
     "@types/csp-html-webpack-plugin": "3.0.0",
     "@types/electron-devtools-installer": "2.2.0",
-    "@types/eslint": "7.2.3",
+    "@types/eslint": "7.2.4",
     "@types/eslint-plugin-prettier": "3.1.0",
     "@types/file-loader": "4.2.0",
     "@types/fs-extra": "9.0.1",
@@ -84,10 +84,10 @@
     "@types/prettier": "2.1.1",
     "@types/react-redux": "7.1.9",
     "@types/react-router": "5.1.8",
-    "@types/react-router-dom": "5.1.5",
+    "@types/react-router-dom": "5.1.6",
     "@types/styled-components": "5.1.3",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "4.4.0",
+    "@typescript-eslint/parser": "4.4.0",
     "@zeit/webpack-asset-relocator-loader": "0.8.0",
     "csp-html-webpack-plugin": "4.0.0",
     "css-loader": "4.3.0",
@@ -96,13 +96,14 @@
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.12.0",
     "eslint-config-standard": "14.1.1",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-babel": "5.3.1",
     "eslint-plugin-html": "6.1.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.21.2",
+    "eslint-plugin-react": "7.21.3",
     "eslint-plugin-standard": "4.0.1",
     "eslint-plugin-unicorn": "22.0.0",
     "file-loader": "6.1.0",
@@ -110,40 +111,40 @@
     "node-loader": "1.0.1",
     "prettier": "2.1.2",
     "react-hot-loader": "4.13.0",
-    "style-loader": "1.2.1",
+    "react-router-dom": "^6.0.0-beta.0",
+    "style-loader": "2.0.0",
     "ts-loader": "8.0.4",
     "typescript": "4.0.3",
     "typesync": "0.7.0"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.31.0",
+    "@blueprintjs/core": "^3.33.0",
     "@javelin/ecs": "^0.19.2",
     "@pixi/unsafe-eval": "^5.3.3",
-    "@rematch/core": "^2.0.0-next.5",
-    "@rematch/immer": "^2.0.0-next.5",
-    "@rematch/loading": "^2.0.0-next.5",
+    "@rematch/core": "^2.0.0-next.6",
+    "@rematch/immer": "^2.0.0-next.6",
+    "@rematch/loading": "^2.0.0-next.6",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "beautiful-react-hooks": "^0.30.0",
     "connected-react-router": "^6.8.0",
     "electron-squirrel-startup": "^1.0.0",
-    "fast-fuzzy": "^1.10.7",
+    "fast-fuzzy": "^1.10.8",
     "fs-extra": "^9.0.1",
-    "history": "^4.10.1",
-    "i18next": "^19.7.0",
-    "i18next-electron-fs-backend": "^1.3.4",
-    "immer": "^7.0.8",
+    "history": "^5.0.0",
+    "i18next": "^19.8.2",
+    "i18next-electron-fs-backend": "^1.3.5",
+    "immer": "^7.0.9",
     "lodash": "^4.17.20",
     "pixi.js": "^5.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-i18next": "^11.7.2",
+    "react-i18next": "^11.7.3",
     "react-pixi-fiber": "^1.0.0-beta.4",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "secure-electron-store": "^1.2.0",
+    "secure-electron-store": "^1.3.3",
     "styled-components": "^5.2.0",
     "styled-normalize": "^8.0.7"
   }
