--- a/package.json
+++ b/package.json
@@ -111,7 +111,6 @@
     "node-loader": "1.0.1",
     "prettier": "2.1.2",
     "react-hot-loader": "4.13.0",
-    "react-router-dom": "^6.0.0-beta.0",
     "style-loader": "2.0.0",
     "ts-loader": "8.0.4",
     "typescript": "4.0.3",
@@ -127,11 +126,9 @@
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "beautiful-react-hooks": "^0.30.0",
-    "connected-react-router": "^6.8.0",
     "electron-squirrel-startup": "^1.0.0",
     "fast-fuzzy": "^1.10.8",
     "fs-extra": "^9.0.1",
-    "history": "^5.0.0",
     "i18next": "^19.8.2",
     "i18next-electron-fs-backend": "^1.3.5",
     "immer": "^7.0.9",
@@ -143,6 +140,7 @@
     "react-pixi-fiber": "^1.0.0-beta.4",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "secure-electron-store": "^1.3.3",
     "styled-components": "^5.2.0",
