--- a/package.json
+++ b/package.json
@@ -73,83 +73,84 @@
     }
   },
   "devDependencies": {
-    "@electron-forge/cli": "6.0.0-beta.53",
-    "@electron-forge/maker-deb": "6.0.0-beta.53",
-    "@electron-forge/maker-rpm": "6.0.0-beta.53",
-    "@electron-forge/maker-squirrel": "6.0.0-beta.53",
-    "@electron-forge/maker-zip": "6.0.0-beta.53",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.53",
+    "@electron-forge/cli": "6.0.0-beta.54",
+    "@electron-forge/maker-deb": "6.0.0-beta.54",
+    "@electron-forge/maker-rpm": "6.0.0-beta.54",
+    "@electron-forge/maker-squirrel": "6.0.0-beta.54",
+    "@electron-forge/maker-zip": "6.0.0-beta.54",
+    "@electron-forge/plugin-webpack": "6.0.0-beta.54",
     "@types/csp-html-webpack-plugin": "3.0.0",
     "@types/electron-devtools-installer": "2.2.0",
-    "@types/eslint": "7.2.4",
+    "@types/eslint": "7.2.6",
     "@types/eslint-plugin-prettier": "3.1.0",
     "@types/file-loader": "4.2.0",
-    "@types/fs-extra": "9.0.1",
+    "@types/fs-extra": "9.0.4",
     "@types/history": "4.7.8",
-    "@types/lodash": "4.14.161",
-    "@types/prettier": "2.1.1",
-    "@types/react-redux": "7.1.9",
+    "@types/lodash": "4.14.165",
+    "@types/prettier": "2.1.5",
+    "@types/react-redux": "7.1.11",
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
-    "@types/styled-components": "5.1.3",
-    "@typescript-eslint/eslint-plugin": "4.4.0",
-    "@typescript-eslint/parser": "4.4.0",
+    "@types/styled-components": "5.1.4",
+    "@typescript-eslint/eslint-plugin": "4.9.0",
+    "@typescript-eslint/parser": "4.9.0",
     "@zeit/webpack-asset-relocator-loader": "0.8.0",
     "csp-html-webpack-plugin": "4.0.0",
     "css-loader": "4.3.0",
-    "electron": "10.1.3",
+    "electron": "11.0.3",
     "electron-devtools-installer": "3.1.1",
-    "eslint": "7.10.0",
-    "eslint-config-prettier": "6.12.0",
-    "eslint-config-standard": "14.1.1",
+    "eslint": "7.14.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-config-standard": "16.0.2",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-babel": "5.3.1",
-    "eslint-plugin-html": "6.1.0",
+    "eslint-plugin-html": "6.1.1",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-prettier": "3.2.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.21.3",
-    "eslint-plugin-standard": "4.0.1",
-    "eslint-plugin-unicorn": "22.0.0",
-    "file-loader": "6.1.0",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-standard": "5.0.0",
+    "eslint-plugin-unicorn": "23.0.0",
+    "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "5.2.0",
-    "node-loader": "1.0.1",
-    "prettier": "2.1.2",
+    "node-loader": "1.0.2",
+    "prettier": "2.2.1",
     "react-hot-loader": "4.13.0",
     "style-loader": "2.0.0",
-    "ts-loader": "8.0.4",
-    "typescript": "4.0.3",
-    "typesync": "0.7.0"
+    "ts-loader": "8.0.11",
+    "typescript": "4.1.2",
+    "typesync": "0.8.0"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.33.0",
+    "@blueprintjs/core": "^3.36.0",
     "@javelin/ecs": "^0.19.2",
     "@pixi/unsafe-eval": "^5.3.3",
-    "@rematch/core": "^2.0.0-next.6",
-    "@rematch/immer": "^2.0.0-next.6",
-    "@rematch/loading": "^2.0.0-next.6",
-    "@types/react": "^16.9.48",
-    "@types/react-dom": "^16.9.8",
-    "beautiful-react-hooks": "^0.30.0",
+    "@rematch/core": "^2.0.0-next.7",
+    "@rematch/immer": "^2.0.0-next.7",
+    "@rematch/loading": "^2.0.0-next.8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "beautiful-react-hooks": "^0.31.0",
     "electron-squirrel-startup": "^1.0.0",
     "fast-fuzzy": "^1.10.8",
     "fs-extra": "^9.0.1",
-    "i18next": "^19.8.2",
+    "gun": "^0.2020.520",
+    "i18next": "^19.8.4",
     "i18next-electron-fs-backend": "^1.3.5",
-    "immer": "^7.0.9",
+    "immer": "^8.0.0",
     "lodash": "^4.17.20",
     "pixi.js": "^5.3.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-i18next": "^11.7.3",
-    "react-pixi-fiber": "^1.0.0-beta.4",
-    "react-redux": "^7.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.4",
+    "react-pixi-fiber": "^0.14.2",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "secure-electron-store": "^1.3.3",
-    "styled-components": "^5.2.0",
+    "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
   }
 }
