--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "eslint": "7.14.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-config-standard": "16.0.2",
+    "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-babel": "5.3.1",
     "eslint-plugin-html": "6.1.1",
