feat: Try load data from CDDA to GUN db

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "eslint-config-standard": "16.0.2",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-babel": "5.3.1",
     "eslint-plugin-html": "6.1.1",
     "eslint-plugin-import": "2.22.1",
@@ -136,10 +137,12 @@
     "electron-squirrel-startup": "^1.0.0",
     "fast-fuzzy": "^1.10.8",
     "fs-extra": "^9.0.1",
+    "fs-jetpack": "^4.1.0",
     "gun": "^0.2020.520",
     "i18next": "^19.8.4",
     "i18next-electron-fs-backend": "^1.3.5",
     "immer": "^8.0.0",
+    "inversify": "^5.0.1",
     "lodash": "^4.17.20",
     "pixi.js": "^5.3.3",
     "react": "^17.0.1",
@@ -150,6 +153,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "reflect-metadata": "^0.1.13",
     "secure-electron-store": "^1.3.3",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
