chore: allow @/service for convenienct for IOC

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "@typings/*": ["./typings/*"],
       "@constants/*": ["./constants/*"],
       "@redux/*": ["./redux/*"],
-      "@ecs/*": ["./ecs/*"]
+      "@ecs/*": ["./ecs/*"],
+      "@services/*": ["./services/*"],
     },
     /* Basic Options */
     "target": "es2019" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
