--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "@rematch/core": "^2.0.0-next.7",
     "@rematch/immer": "^2.0.0-next.7",
     "@rematch/loading": "^2.0.0-next.8",
+    "@types/lokijs": "^1.5.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "beautiful-react-hooks": "^0.31.0",
@@ -139,12 +140,12 @@
     "fast-fuzzy": "^1.10.8",
     "fs-extra": "^9.0.1",
     "fs-jetpack": "^4.1.0",
-    "gun": "^0.2020.520",
     "i18next": "^19.8.4",
     "i18next-electron-fs-backend": "^1.3.5",
     "immer": "^8.0.0",
     "inversify": "^5.0.1",
     "lodash": "^4.17.20",
+    "lokijs": "^1.5.11",
     "pixi.js": "^5.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
