--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
+    "headless-start": "cross-env NODE_ENV=development ts-node -T -r tsconfig-paths/register ./scripts/headlessStart/index.ts",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -95,6 +96,7 @@
     "@typescript-eslint/eslint-plugin": "4.9.1",
     "@typescript-eslint/parser": "4.9.1",
     "@zeit/webpack-asset-relocator-loader": "0.8.0",
+    "cross-env": "^7.0.3",
     "csp-html-webpack-plugin": "4.0.0",
     "css-loader": "4.3.0",
     "electron": "11.0.4",
@@ -122,6 +124,8 @@
     "react-hot-loader": "4.13.0",
     "style-loader": "2.0.0",
     "ts-loader": "8.0.11",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "4.1.2",
     "typesync": "0.8.0"
   },
