--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
     "@types/styled-components": "5.1.5",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.9.1",
     "@typescript-eslint/parser": "4.9.1",
     "@zeit/webpack-asset-relocator-loader": "0.8.0",
@@ -162,6 +163,7 @@
     "reflect-metadata": "^0.1.13",
     "secure-electron-store": "^1.3.3",
     "styled-components": "^5.2.1",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "uuid": "^8.3.2"
   }
 }
